objects/H2S__ApexLog__c.object
<CustomObject>
    <description>HarvestSync for Salesforce - APEX Error Logs</description>
    <fields>
        <fullName>H2S__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H2S__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H2S__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Log</label>
    <listViews>
        <fullName>H2S__All</fullName>
        <columns>NAME</columns>
        <columns>H2S__Severity__c</columns>
        <columns>H2S__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log[{0}</displayFormat>
        <label>Apex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>